# portfolio-site

./: Dockerfile  Makefile  README.md  app.py  encode.py  portfolio-site.service  pyproject.toml  requirements.txt
.github/workflows/: image_build.yaml
blog/: about.yaml
blog/code_snippets/: docker_compose_add_label.sh  mazda_wg_allowed_ips.yaml  mitmproxy_config.yaml  mitmproxy_k8s.yaml  pihole_compose.yaml  plex_with_socat.yaml  wireguard_client.conf  wireguard_hub.conf  wireguard_lan.conf
blog/posts/: 2020_01_06.yaml  2020_01_6.yaml  2020_04_13.yaml  2020_04_5.yaml  2020_06_2.yaml  2020_4_13.yaml  2020_4_5.yaml  2022_05_13.yaml  2022_5_13.yaml  2023_04_16.yaml  2023_11_23.yaml  2023_4_16.yaml  2024_03_21.yaml  2024_11_22.yaml  2024_3_21.yaml  2025_01_29.yaml  2025_04_14.yaml  2025_12_02.yaml  2025_1_29.yaml  template.yaml.bak
code_snippets/: wireguard_client.conf  wireguard_lan.conf
examples/: compose.yaml
posts/: 1.yaml  2020_1_6.yaml  2020_6_2.yaml  2022_5_13.yaml  2023_11_23.yaml
src/: posts.py
static/: contact.css  decode.js  example_compose.yaml  projects.css  robots.txt  style.css
static/scripts/: copyCodeSnippet.js  decode.js
static/styles/: projects.css  style.css
templates/: about.html  blog.html  blog.html.j2  contact.html  contact.html.j2  feed.xml  home.html  home.html.j2  layout.html  layout.html.j2  macros.j2  projects.html  projects.html.j2  sitemap.xml  sitemap.xml.j2  text_processor.html
