[project]
name = "portfolio-site"
version = "0.10.4"
description = "Personal blog and portfolio website running on Flask and Jinja templates"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1,<4.0.0",
    "flask-minify>=0.50,<1.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "werkzeug>=3.1.5,<4.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "flask-caching>=2.3.1,<3.0.0",
]
